jena-shex/src/test/files/shexTest/negativeStructure/ExtendsNoMainShape2.shex
<http://a.example/S1> {<a> .} AND {<b> .}
<http://a.example/S2> EXTENDS @<http://a.example/S1> {} AND {<c> .} 

